# advent-of-code-2021

./: .bazelrc  .gitignore  README.md  WORKSPACE  rules.bzl
day-01/: BUILD.bazel  part-1.ijs  part-2.ijs
day-02/: BUILD.bazel  part-1.sql  part-2.sql
day-03/: BUILD.bazel  part-1.fs
day-04/: BUILD.bazel  Part1.java  Part2.java
day-05/: part-1.c  part-2.c
day-06/: BUILD.bazel  part-1.ps  part-1.sh  part-2.ps  part-2.sh
day-07/: part-1.d
day-09/: BUILD.bazel  part-1.php  part-2.php
day-1/: BUILD.bazel  part-1.awk  part-1.c  part-1.cc  part-2.awk  part-2.c  part-2.cc
day-10/: BUILD.bazel  part-1.lisp  part-1.pl  part-2.lisp  part-2.pl
day-11/: BUILD.bazel  part-1.go  part-2.go
day-12/: BUILD.bazel  part-1.rb  part-1.swift  part-2.rb  part-2.swift
day-13/: part-1.awk  part-2.awk
day-14/: part-1.pl  part-2.pl
day-15/: BUILD.bazel  part-1.rs  part-2.rs
day-16/: BUILD.bazel  part-1.rb  part-1.scala  part-2.rb  part-2.scala
day-17/: BUILD.bazel  part-1.kt  part-2.kt
day-18/: BUILD.bazel  part-1.js  part-1.py  part-2.js  part-2.py
day-19/: part-1.py  part-2.py
day-2/: BUILD.bazel  part-1.cc  part-1.dart  part-1.sh  part-1.sql  part-2.cc  part-2.dart  part-2.sh  part-2.sql
day-20/: BUILD.bazel  part-1.lua  part-2.lua
day-21/: part-1.sh  part-2.sh
day-22/: BUILD.bazel  Part1.hs  Part2.hs
day-23/: BUILD.bazel  part-1.rb  part-2.rb
day-24/: BUILD.bazel  part-1.cs  part-2.cs
day-25/: BUILD.bazel  part-1.f90
day-3/: BUILD.bazel  Part1.java  Part2.java  part-1.fs  part-1.pl  part-2.fs  part-2.pl
day-4/: Part1.java  Part2.java
day-5/: BUILD.bazel  part-1.cc  part-2.cc
day-7/: BUILD.bazel  part-1.js  part-2.d  part-2.js
day-8/: part-1.dart  part-2.dart
day-9/: BUILD.bazel  part-1.py  part-2.py
scratch/: BUILD.bazel  rules.bzl  test.prolog
