INPUT = "large.input"
DATA = ["small.input", "large.input"]

genrule(
    name = "part-1",
    srcs = ["part-1.sql"] + DATA,
    outs = ["part-1.output"],
    cmd = "cp $(location {}) input && $(location @sqlite3//:sqlite3) < $(location part-1.sql) | tee $@".format(INPUT),
    tools = ["@sqlite3//:sqlite3"],
)

genrule(
    name = "part-2",
    srcs = ["part-2.sql"] + DATA,
    outs = ["part-2.output"],
    cmd = "cp $(location {}) input && $(location @sqlite3//:sqlite3) < $(location part-2.sql) | tee $@".format(INPUT),
    tools = ["@sqlite3//:sqlite3"],
)
