load("//:rules.bzl", "gen_binary")

SETUP = 'cp "${@: -1}" input; set -- "${@:1:$(($#-1))}"'

gen_binary(
    name = "part-1",
    srcs = ["part-1.sql"],
    setup_cmd = SETUP,
    tool_args = ["<", "$(location part-1.sql)"],
    tool = "@sqlite3//:sqlite3",
)

gen_binary(
    name = "part-2",
    srcs = ["part-2.sql"],
    setup_cmd = SETUP,
    tool_args = ["<", "$(location part-2.sql)"],
    tool = "@sqlite3//:sqlite3",
)
