load("//:rules.bzl", "gen_binary")

gen_binary(
    name = "part-1-lisp",
    tool = "@lisp//:src/runtime/sbcl",
    srcs = ["part-1.lisp", "@lisp//:output/sbcl.core"],
    tool_args = ["--core", "$(location @lisp//:output/sbcl.core)", "--script", "$(location part-1.lisp)"],
)

gen_binary(
    name = "part-2-lisp",
    tool = "@lisp//:src/runtime/sbcl",
    srcs = ["part-2.lisp", "@lisp//:output/sbcl.core"],
    tool_args = ["--core", "$(location @lisp//:output/sbcl.core)", "--script", "$(location part-2.lisp)"],
)
