load("@rules_haskell//haskell:defs.bzl", "haskell_binary", "haskell_toolchain_library")

haskell_toolchain_library(name = "base")
haskell_toolchain_library(name = "containers")
haskell_toolchain_library(name = "text")

haskell_binary(
    name = "part1",
    srcs = ["Part1.hs"],
    deps = [":base", ":containers", ":text"],
)

alias(
    name = "part-1",
    actual = ":part1",
)

haskell_binary(
    name = "part2",
    srcs = ["Part2.hs"],
    deps = [":base", ":containers", ":text"],
)

alias(
    name = "part-2",
    actual = ":part2",
)
