load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "csharp_binary")

csharp_binary(
    name = "part-1.exe",
    srcs = ["part-1.cs"],
    deps = ["@core_sdk_stdlib//:libraryset"],
)

alias(
    name = "part-1",
    actual = ":part-1.exe",
)

csharp_binary(
    name = "part-2.exe",
    srcs = ["part-2.cs"],
    deps = ["@core_sdk_stdlib//:libraryset"],
)

alias(
    name = "part-2",
    actual = ":part-2.exe",
)
